--- a/sources/index.css
+++ b/sources/index.css
@@ -6,3 +6,15 @@ html, body, .game
     width: 100%;
     height: 100%;
 }
+
+.tp-dfwv
+{
+    top: 20px !important;
+    right: 30px !important;
+    width: 400px !important;
+}
+
+.tp-lblv_v
+{
+    width: 200px !important;
+}
