:art: Rename Cursor to RayCursor + :sparkles: Inputs > Add Nipple

--- a/sources/style/general.styl
+++ b/sources/style/general.styl
@@ -31,6 +31,7 @@ body
     font-style normal
     -webkit-font-smoothing antialiased
     -moz-osx-font-smoothing grayscale
+    touch-action none
 
 html
     background radial-gradient(farthest-side at 0 0, #251f2b, #1d1721)
