:art: Gamepad > Improve key mapping

--- a/sources/style/general.styl
+++ b/sources/style/general.styl
@@ -31,6 +31,8 @@ body
     font-style normal
     -webkit-font-smoothing antialiased
     -moz-osx-font-smoothing grayscale
+
+.experience
     touch-action none
 
 html
