:bug: Modals > Change close icon for xbox controller

--- a/sources/style/modals.styl
+++ b/sources/style/modals.styl
@@ -200,7 +200,7 @@
                     align-items center
                     vertical-align bottom
                     border 2px solid #ffffff
-                    padding-top 2px
+                    // padding-top 2px
                     width 30px
                     height 30px
                     border-radius 15px
