:iphone: Notifications > Improve touch support

--- a/sources/style/menu.styl
+++ b/sources/style/menu.styl
@@ -102,7 +102,7 @@
             width @css{ min(600px, calc(100% - 20px)) }
             height @css{ max(80vh, calc(100% - (44px + 10px))) }
 
-        @media only screen and (max-width 420px)
+        @media only screen and (max-width 400px)
             left 0
             width calc(100vw - 10px)
 
@@ -206,7 +206,7 @@
             padding 25px 40px 40px 40px
 
             @media only screen and (orientation portrait)
-                width @css{ min(600px, calc(100vw - 70px)) }
+                width @css{ min(600px, calc(100% - 20px)) }
 
             @media only screen and (max-width 870px)
                 padding 20px 30px 30px 30px
@@ -214,7 +214,7 @@
             @media only screen and (max-width 520px)
                 padding 15px 20px 20px 20px
 
-            @media only screen and (max-width 420px)
+            @media only screen and (max-width 400px)
                 padding 10px 15px 15px 15px
                 width calc(100vw - 10px)
 
@@ -231,7 +231,7 @@
         @media only screen and (orientation portrait)
             left 10px
 
-        @media only screen and (max-width 420px)
+        @media only screen and (max-width 520px)
             left 0
             gap 2px
 
@@ -303,7 +303,10 @@
         width 50px
         height 44px
 
-        @media only screen and (max-width 420px)
+        @media only screen and (max-width 520px)
+            right 0
+
+        @media only screen and (max-width 400px)
             right -1px
             top 10px
             bottom auto
