--- a/sources/style/achievements.styl
+++ b/sources/style/achievements.styl
@@ -33,7 +33,7 @@
         margin-bottom 2em
 
         .title
-            font-size 32px
+            font-size 1.7rem
             text-align center
             margin-bottom 0.5em
 
@@ -42,7 +42,7 @@
             justify-content center
             gap 10px
 
-            @media only screen and (max-width 420px)
+            @media only screen and (max-width 400px)
                 gap 2px
 
         .reward
@@ -123,7 +123,7 @@
         .title
             text-align left
             color #ffceca
-            font-size 32px
+            font-size 1.7rem
             margin-bottom 0
 
         .description
