:sparkles: Achievements > Rewards > Add tooltips

--- a/sources/style/achievements.styl
+++ b/sources/style/achievements.styl
@@ -49,6 +49,9 @@
             display block
             position relative
 
+            .tooltip
+                --width 130px
+
             &.is-active
                 &::after
                     border-color #d5ff95
