--- a/sources/style/tooltips.styl
+++ b/sources/style/tooltips.styl
@@ -7,9 +7,10 @@
 
 .tooltip
     --width 200px
+    
     display none
     position absolute
-    bottom calc(100% - 2px)
+    bottom calc(100% + 6px)
     left calc(50% - var(--width) / 2)
     width var(--width)
     padding 12px 15px
